# artifacts

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yml  404.html  CLAUDE.md  LICENSE  Makefile  README.md  deploy-metadata.json  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  stylelint.config.js
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: audit-repo-settings.yml  codeql.yml  commit-python-locks.yml  dependency-audit.yml  deploy-failure-alert.yml  live-site-smoke.yml  refresh-action-shas.yml  refresh-locks.yml  refresh-python-locks.yml  schedule-watchdog.yml  update.yml
apps/bond-price-vs-rate/: README.md  index.html
apps/loan-amortization/: README.md  index.html
apps/prompt-caching/: README.md  description.txt  index.html
apps/tokenizer-explorer/: README.md  index.html
assets/icons/: manifest.webmanifest
config/: artifact_contract.json  eslint.config.js  gallery_metadata.json  jsconfig.json  knip.json  prettierignore  security_audit.json  stylelint.config.js  vendored_assets.json
config/types/: app-globals.d.ts  chart-vendor.d.ts
css/: app-shell.css  app-tokens.css  fonts.css  root-gallery-artifacts.css  root-gallery-foundation.css  root-gallery-responsive.css  style.css
css/app/: 01-reset.css  02-layout.css  03-controls.css  04-components.css  05-chrome.css  06-responsive.css
css/gallery/: 01-tokens.css  02-tokens-dark.css  03-reset.css  04-utilities.css  05-header.css  06-toolbar.css  07-book.css  08-desk-notes.css  09-cards.css  10-pagination.css  11-detail.css  12-chrome.css  13-responsive.css
css/src/: 01-tokens.css  02-gallery.css  03-artifact-shell.css  04-artifact-components.css  05-accessibility-and-utilities.css  06-responsive-and-motion.css
docs/: README.md  architecture.md  frontend.md  maintenance.md  operations.md  style.md  workspace.md
docs/adr/: 0001-root-publishing-platform.md  0002-shared-app-system-and-thumbnail-persistence.md  0003-makefile-first-and-single-source-of-truth.md  0004-per-artifact-app-stylesheets.md  0005-ci-scaling-architecture-and-roadmap.md  0005-shared-design-tokens-and-component-system.md  0006-shared-design-tokens-and-component-system.md
js/: app-theme.js  app.js  boot-guard.js  data.js  gallery-config.js
js/modules/: app-runtime.js  app-shell.js  book-scene.js  catalog.js  chart-theme.js  config.js  detail-overlay.js  element-cache.js  filter-dropdown.js  formatting.js  gallery-app.js  html-escape.js  icons.js  render.js  runtime.js  section-nav.js  segmented.js
pr-preview/pr-1/: 404.html  index.html
pr-preview/pr-10/: index.html
pr-preview/pr-100/: deploy-metadata.json  index.html
pr-preview/pr-101/: deploy-metadata.json  index.html
pr-preview/pr-102/: deploy-metadata.json  index.html
pr-preview/pr-103/: deploy-metadata.json  index.html
pr-preview/pr-104/: deploy-metadata.json  index.html
pr-preview/pr-105/: deploy-metadata.json  index.html
pr-preview/pr-107/: deploy-metadata.json  index.html
pr-preview/pr-109/: deploy-metadata.json  index.html
pr-preview/pr-11/: index.html
pr-preview/pr-110/: deploy-metadata.json  index.html
pr-preview/pr-111/: deploy-metadata.json  index.html
pr-preview/pr-112/: deploy-metadata.json  index.html
pr-preview/pr-113/: deploy-metadata.json  index.html
pr-preview/pr-114/: deploy-metadata.json  index.html
pr-preview/pr-115/: 404.html  deploy-metadata.json  index.html
pr-preview/pr-116/: deploy-metadata.json  index.html
pr-preview/pr-117/: deploy-metadata.json  index.html
pr-preview/pr-118/: deploy-metadata.json  index.html
pr-preview/pr-119/: deploy-metadata.json  index.html
pr-preview/pr-12/: index.html
pr-preview/pr-120/: deploy-metadata.json  (+1 more)
scripts/: align_tables.py  check-overrides.mjs  check_editorconfig.py  generate_index.py  generate_thumbnails.py  lint-workflows.mjs  prepare_site.py  run_security_audit.py  scaffold_artifact.py  verify_deploy.py  workflow_helpers.py
tests/: frontend_helpers.py  test_align_tables.py  test_check_editorconfig.py  test_frontend_accessibility.py  test_frontend_browser_flows.py  test_frontend_live.py  test_frontend_smoke.py  test_generate_index.py  test_generate_thumbnails.py  test_generate_thumbnails_coverage.py  test_prepare_site.py  test_project_config.py  test_run_security_audit.py  test_scaffold_artifact.py  test_verify_deploy.py  test_workflow_helpers.py
(+788 files in other folders)
