[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "artifacts-tools"
version = "0.1.0"
description = "Build tooling for the Artifacts gallery"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  "Pillow==12.3.0",
  "playwright==1.61.0",
]

[project.optional-dependencies]
dev = [
  "pip-audit==2.10.1",
  "pytest-cov==7.1.0",
  "pytest==9.1.1",
  "ruff==0.15.20",
  "vulture==2.14",
  "yamllint==1.38.0",
]

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.artifacts]
site_url = "https://hermione-granger-1176.github.io/artifacts/"
site_path = "/artifacts/"
repository_url = "https://github.com/Hermione-Granger-1176/artifacts"

[tool.pytest.ini_options]
addopts = "-ra --cov=scripts/ --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "node_modules", "_site", "__pycache__", "*.egg-info"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.vulture]
paths = ["scripts", "tests"]
min_confidence = 100
sort_by_size = true
