[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artifacts-tools"
version = "0.1.0"
description = "Build tooling for the Artifacts gallery"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  "Pillow==12.3.0",
  "playwright==1.61.0",
]

[dependency-groups]
dev = [
  "mypy==2.1.0",
  "pip-audit==2.10.1",
  "pytest-cov==7.1.0",
  "pytest==9.1.1",
  "ruff==0.15.20",
  "vulture==2.14",
  "yamllint==1.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.artifacts]
site_url = "https://hermione-granger-1176.github.io/artifacts/"
site_path = "/artifacts/"
repository_url = "https://github.com/Hermione-Granger-1176/artifacts"

[tool.pytest.ini_options]
addopts = "-v --strict-markers --strict-config -ra --cov=scripts/ --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "node_modules", "_site", "__pycache__", "*.egg-info"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["scripts"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "@overload",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TC", "PTH", "RUF", "D"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D102", "TC003"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.vulture]
paths = ["scripts", "tests"]
min_confidence = 60
# TypedDict fields are read through string keys, so vulture only sees the
# declarations: ThumbnailStats (attempted/generated/skipped), BadgeConfig
# (alt/logo/logo_color), ArtifactItem (id), and ArtifactContract
# (artifactIdPattern/artifactBasePath/thumbnailFile).
ignore_names = [
  "attempted",
  "generated",
  "skipped",
  "alt",
  "logo",
  "logo_color",
  "id",
  "artifactIdPattern",
  "artifactBasePath",
  "thumbnailFile",
]
sort_by_size = true
